--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
@@ -20,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "local": "react-scripts start",
     "start": "serve build -s -n -L -p $PORT",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
